 2003-07-03 Al Riddoch <alriddoch@zepler.org>
    - Update rpm spec to be cleaner, and make the technical sections
      more generic.
 2003-06-23 Al Riddoch <alriddoch@zepler.org>
    - Update Makefile.ams so distcheck works.
 2003-05-06 Al Riddoch <alriddoch@zepler.org>
    - skstream/skstream.h, skstream/skstream.cpp, skstream_unix.h:
      Re-work basic_socket_stream so it can have either stream or datagram
      buffers.
    - ping/ping.cpp, ping/ping.h, test/basicskstreamtest.h,
      test/childskstreamtest.h, test/skservertest.h: Get the tests and examples
      building again.
 2003-05-04 James Turner <james@worldforge.org>
    - Updated OS-X projectbuilder files, including adding an
      skstreamconfig.h.pbx config file, which is copied to
      the framework prior to the build (by a ShellScript build phase).
 2003-05-04 Al Riddoch <alriddoch@zepler.org>
    - Sort out nasty hard tabs from address checks.
    - Start work on updating the checks.
 2003-05-04 James Turner <james@worldforge.org>
    - Fix the Unix and IPv6 tests under OS-X (autoconf build), OS-X
      needs <sys/types.h> included before any other header for
      all manner of system headers.
 2003-05-04 Al Riddoch <alriddoch@zepler.org>,
    - Fix unix and IPv6 checks so they include the right headers.
 2003-05-04 Al Riddoch <alriddoch@zepler.org>,
    - skstream/skstream.cpp: Add a check to detect IPv6 sockaddr in
      headers, and treat address explicitly as an IPv6 address if
      it is.
 2003-05-04 Al Riddoch <alriddoch@zepler.org>,
    - Add a second pkgconfig file for apps that need unix socket support.
    - Rename sksystem.h as skstreamconfig.h, and put it in an architecture
      dependent subdir. Modify pkgconfig files to handle this.
    - Handle errors in a more general way to reduce the number
      of places where pre-processor conditionals are required.
    - Remove some redundant code for dealing with win32 that has
      now been superceded.