@@ -22,7 +22,6 @@
 #define RGJ_FREE_SOCKET_CONFIG_H_
 
 @SKSTREAM_SOCKET_HEADER@
-@SKSTREAM_STREAMBUF_HEADER@
 @SKSTREAM_TIMEVAL_HEADER@
 
 typedef @SKSTREAM_SOCKLEN_TYPE@ SOCKLEN;
@@ -45,18 +44,6 @@ typedef @SKSTREAM_SOCKET_TYPE@ SOCKET_TYPE;
   #include <net/netdb.h>
   #include <errno.h>
 #endif
-
-#ifndef INVALID_SOCKET
-#define INVALID_SOCKET (SOCKET_TYPE)(~0)
-#endif // INVALID_SOCKET
-
-#ifndef SOCKET_ERROR
-#define SOCKET_ERROR   -1
-#endif // SOCKET_ERROR
-
-#ifndef INADDR_NONE
-#define INADDR_NONE   0xFFFFFFFF
-#endif // INADDR_NONE
 
 #define SOCKET_BLOCK_ERROR @SKSTREAM_BLOCK_ERROR_VAL@
 
